# utazon_backend

./: .dockerignore  .env.example  .gitleaksignore  :wq  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  renovate.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs  state.rs
src/common/: config.rs  errors.rs  mod.rs  state.rs  validation.rs
src/common/infrastructure/: storage.rs
src/config/: mod.rs
src/domains/: mod.rs
src/domains/contact/: handler.rs  mod.rs  routes.rs  service.rs
src/domains/health/: handler.rs  mod.rs  routes.rs
src/domains/video/: handler.rs  mod.rs  routes.rs  service.rs
src/handlers/: auth.rs  contact.rs  health.rs  mod.rs
src/health/: mod.rs
src/middleware/: jwt.rs  request_id.rs
src/routes/: contact.rs  mod.rs  videos.rs
src/services/: minio.rs  notification.rs
src/validation/: mod.rs
src/video/: handler.rs  mod.rs  routes.rs
tests/: contact_tests.rs  health_tests.rs  root_tests.rs  test_helpers.rs
