[package]
name = "utazon_backend"
version = "1.0.0"
edition = "2024"
authors = ["Adrien Pelfresne"]
description = "Rust backend API for Utazon Portfolio"

[[bin]]
name = "utazon_backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }

tokio-util = { version = "0.7", features = ["io"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"

chrono = { version = "0.4", features = ["serde"] }

mime_guess = "2.0"

reqwest = { version = "0.12.22", features = ["json"] }
