[package]
name = "utazon_backend"
version = "1.0.0"
edition = "2024"
authors = ["Adrien Pelfresne"]
description = "API for Utazon Portfolio, handling presigned url generation, and contact requests"

[lib]
name = "utazon_backend"
path = "src/lib.rs"

[[bin]]
name = "utazon_backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0"
garde = { version = "0.20", features = ["derive", "email"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
aws-sdk-s3 = "1.117.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
